# CookFlow

./: .env.example  .gitignore  README.md  TODO.md  launch.sh  main.py  pyproject.toml  requirements.txt
api/: cookflow.db  main.py
api/presentation/: general_router.py
api/src/: database.py
config/: application.yaml  debug.yaml  tasks.yaml
migrations/: env.py
migrations/versions/: 0502f333e7fa_create_recipes_table.py  4f85ae010be0_add_ingredient_table.py  e44e476f7968_20250702_210913_migration.py  e87baa0e691d_add_recipes_ingredients_table.py  ed46b12c6189_20250702_214155_migration.py  f81782f42d04_20250702_211505_migration.py
server/: main.py  pyproject.toml
src/config/: settings.py
src/controller/: dashboard_controller.py  ingredient_controller.py  meal_controller.py  meal_recipe_controller.py  recipe_controller.py  recipe_ingredient_controller.py
src/entities/: menu.py  recipe.py
src/entity/: ingredient.py  meal.py  meal_recipe.py  recipe.py  recipe_ingredient.py
src/form/: ingredient_type.py  meal_recipe_type.py  meal_type.py  recipe_ingredient_type.py  recipe_type.py
src/repositories/: base_repository.py  menu_repository.py  recipe_repository.py
src/repository/: ingredient_repository.py  meal_recipe_repository.py  meal_repository.py  recipe_ingredient_repository.py  recipe_repository.py
streamlit/: main.py  pyproject.toml
streamlit/.streamlit/: config.toml
streamlit/pages/: ingredients.py
templates/: base.html
templates/dashboard/: home.html
templates/ingredient/: create.html  index.html  read.html  update.html
(+77 files in other folders)
